# mutex_protected

./: .bazelrc  BUILD.bazel  CMakeLists.txt  CODEOWNERS  DRAFT.md  LICENSE.txt  README.md  mutex_protected.cc  mutex_protected.h  mutex_protected_test.cc  pyproject.toml
.github/workflows/: clang-tidy.yml  cmake.yml
benchmarks/: BUILD.bazel  CMakeLists.txt  mutex_protected_benchmark.cc
cmake/: xyz_add_library.cmake  xyz_add_object_library.cmake  xyz_add_test.cmake
compile_checks/: BUILD.bazel  CMakeLists.txt  indirect_as_member.cc  indirect_consteval.cc  indirect_in_variant.cc  indirect_pimpl.h
