load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "mutex_protected",
    srcs = ["mutex_protected.cc"],
    hdrs = ["mutex_protected.h"],
    copts = ["-Iexternal/mutex_protected/"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "mutex_protected_test",
    size = "small",
    srcs = ["mutex_protected_test.cc"],
    deps = [
        "mutex_protected",
        "@com_google_googletest//:gtest_main",
    ],
)
