load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "mutex_protected_benchmark",
    srcs = [
        "mutex_protected_benchmark.cc",
    ],
    deps = [
        "//:mutex_protected",
        "@com_github_google_benchmark//:benchmark_main",
    ],
)

build_test(
    name = "mutex_protected_benchmark_build_test",
    targets = ["mutex_protected_benchmark"],
)
