load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "indirect_in_variant",
    srcs = ["indirect_in_variant.cc"],
    visibility = ["//visibility:private"],
    deps = ["//:mutex_protected"],
)

build_test(
    name = "indirect_in_variant_build_test",
    targets = ["indirect_in_variant"],
)

cc_library(
    name = "indirect_as_member",
    srcs = ["indirect_as_member.cc"],
    visibility = ["//visibility:private"],
    deps = ["//:mutex_protected"],
)

build_test(
    name = "indirect_as_member_build_test",
    targets = ["indirect_as_member"],
)

cc_library(
    name = "indirect_consteval",
    srcs = ["indirect_consteval.cc"],
    visibility = ["//visibility:private"],
    deps = ["//:mutex_protected"],
)

build_test(
    name = "indirect_consteval_build_test",
    targets = ["indirect_consteval"],
)

cc_library(
    name = "indirect_pimpl",
    srcs = [
        "indirect_pimpl.cc",
        "indirect_pimpl_use.cc",
    ],
    hdrs = ["indirect_pimpl.h"],
    visibility = ["//visibility:private"],
    deps = ["//:mutex_protected"],
)

build_test(
    name = "indirect_pimpl_build_test",
    targets = ["indirect_pimpl"],
)
